<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <!--Name = classe java relacionada-->
    <!--Layout = layout relacionado-->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appcuriosidades.ui.serie.SerieFragment"
        android:label="@string/menu_serieA"
        tools:layout="@layout/fragment_serie" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.appcuriosidades.ui.perguntas.PerguntasFragment"
        android:label="@string/menu_perguntas"
        tools:layout="@layout/fragment_perguntas" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.appcuriosidades.ui.resultado.ResultadoFragment"
        android:label="@string/menu_result"
        tools:layout="@layout/fragment_resultado" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.appcuriosidades.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.appcuriosidades.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.appcuriosidades.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>