<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--Icones-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/movie"
            android:title="@string/menu_serie" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/list"
            android:title="@string/menu_perguntas" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/checkmark_"
            android:title="@string/menu_resultado" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/compartilhar" />

    </group>

</menu>
